WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156287
REGRESSION(
r196629
): Messages text size only changes for sending text, conversation text size does not change
https://bugs.webkit.org/show_bug.cgi?id=156287
Summary
REGRESSION(r196629): Messages text size only changes for sending text, conver...
Antti Koivisto
Reported
2016-04-06 04:31:22 PDT
We may fail to invalidate descendant style if there are multiple attribute selectors that differ by value.
Attachments
patch
(5.12 KB, patch)
2016-04-06 04:35 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(5.64 KB, patch)
2016-04-06 05:04 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-04-06 04:31:47 PDT
<
rdar://problem/24264756
>
Antti Koivisto
Comment 2
2016-04-06 04:35:56 PDT
Created
attachment 275769
[details]
patch
Antti Koivisto
Comment 3
2016-04-06 05:04:49 PDT
Created
attachment 275771
[details]
patch
Antti Koivisto
Comment 4
2016-04-06 05:27:31 PDT
http://trac.webkit.org/changeset/199099
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug