REGRESSION(r196629): Messages text size only changes for sending text, conversation text size does not change https://bugs.webkit.org/show_bug.cgi?id=156287 <rdar://problem/24264756>

Reviewed by Andreas Kling.

Source/WebCore:

* css/RuleFeature.cpp:
(WebCore::RuleFeatureSet::recursivelyCollectFeaturesFromSelector):
(WebCore::makeAttributeSelectorKey):

    Include attribute value to the key. Otherwise we may deduplicate selectors that are not indentical.

(WebCore::RuleFeatureSet::collectFeatures):
(WebCore::RuleFeatureSet::add):

    Use HashMap::ensure().

* css/RuleFeature.h:

LayoutTests:

* fast/css/style-invalidation-attribute-change-descendants-expected.txt:
* fast/css/style-invalidation-attribute-change-descendants.html:



Canonical link: https://commits.webkit.org/174372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199099 268f45cc-cd09-0410-ab3c-d52691b4dbfc